# 8017Group4.1

./: .gitattributes  .gitignore  MODEL_DETAILS.md  README.md  README_OLD.md  STAT 8017B Project Instruction and Guideline - 2026 Spring (1).docx  notes  project_plan.md  pyproject.toml  requirements.txt
app/: chatbot_app.py  hk_etf_intelligence_app.py
data/ETF/METADATA/: .ETFs.csv.icloud
data/ETF/Summary/: ETP_Data_Export.xlsx
data/NEWS/: .FinSen_US.csv.icloud
model_output/Synthesis/: synthesis_run_summary.json
model_output/Synthesis/cache/: synthesis_response_cache.json
model_output/Synthesis/finetune_all/: all_tickers_finetune_qa_summary.json
model_output/dna/: financial_dna.parquet
model_output/dna/advisory/: hidden_twin_candidates.parquet  home_bias_candidates.parquet
model_output/dna/cluster_views/: cluster_perspectives.parquet  macro_sensitivity.parquet  return_risk_profile.parquet
model_output/synpse/: benchmark_side_by_side_20260425_171833.json  benchmark_side_by_side_20260425_182225.json  etf_profiles.csv  synapse_run_summary.json
model_output/synpse/cache/: corpus_embeddings_db91cef6f5950c16.pt
models/: complaint_dt.joblib  complaint_mlp.joblib  complaint_nb.joblib  complaint_pca.joblib  complaint_svm.joblib  complaint_svm_pca.joblib  fund_kmeans.joblib  fund_pca_scaler.joblib  fund_return_lr.joblib  fund_return_scaler.joblib  intent_labels.joblib  intent_matrix.joblib  intent_tfidf.joblib  sentiment_nb.joblib  sentiment_svm.joblib  sentiment_tfidf.joblib  stock_return_lr.joblib  stock_return_rf.joblib
notebooks/: 01_preprocessing.ipynb  02_classification.ipynb  03_regression.ipynb  04_unsupervised.ipynb  05_chatbot.ipynb
scripts/: download_data.py  run_all_notebooks.sh
src/: __init__.py  etf_pipeline.py  scrape_wsj_archive_titles.py
src/data_ingestion/: __init__.py  etf_market_data_fetcher.py  etf_top_holdings_data_fetcher.py
src/hkex_etf/: etf_document_scraper.py  etf_metadata_export.py
src/hkex_etf_scraper/: etf_document.py  etf_export.py
src/market_data/: yahoo_api.py
src/model/: __init__.py
src/text_extract/: pdf_text_cleaning.py
src/text_extraction/: __init__.py  pdf_text_extraction.py  pdf_text_extractor.py
(+1213 files in other folders)
