[project]
name = "hk-etf-data-pipeline"
version = "0.1.0"
description = "HKEX ETF metadata and document processing pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gensim",
    "joblib",
    "jupyter",
    "matplotlib",
    "mlxtend",
    "nbconvert",
    "nltk",
    "numpy",
    "ollama",
    "openpyxl",
    "pandas",
    "peft>=0.19.1",
    "playwright",
    "plotly",
    "pyarrow>=24.0.0",
    "pypdf",
    "requests",
    "ruff>=0.15.12",
    "scikit-learn",
    "selenium",
    "sentence-transformers",
    "streamlit",
    "torch",
    "torchvision>=0.26.0",
    "tqdm",
    "transformers>=5.6.2",
    "yfinance",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
